--- a/package.json
+++ b/package.json
@@ -9,10 +9,15 @@
     "typescript": "^5.0.0"
   },
   "dependencies": {
+    "@commander-js/extra-typings": "^14.0.0",
     "@elysiajs/cors": "^1.1.0",
     "@elysiajs/static": "^1.1.0",
-    "elysia": "^1.1.6",
-    "logestic": "^1.2.3"
+    "@sinclair/typebox": "^0.34.41",
+    "commander": "^14.0.2",
+    "elysia": "^1.4.18",
+    "logestic": "^1.2.3",
+    "markdown-it": "^14.1.0",
+    "markdown-it-latex": "^0.2.0"
   },
   "scripts": {
     "dev": "bun run entrypoints/dev.ts"
