--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@elysiajs/static": "^1.1.0",
     "@kitajs/html": "^4.2.11",
     "@sinclair/typebox": "^0.34.41",
+    "@types/mathjax": "^0.0.40",
     "commander": "^14.0.2",
     "elysia": "^1.4.18",
     "highlight.js": "^11.11.1",
@@ -22,7 +23,9 @@
     "logestic": "^1.2.3",
     "marked": "^17.0.1",
     "marked-extended-latex": "^1.1.0",
-    "marked-highlight": "^2.2.3"
+    "marked-highlight": "^2.2.3",
+    "mathjax": "^4.0.0",
+    "tailwindcss": "^4.1.18"
   },
   "scripts": {
     "dev": "bun run entrypoints/dev.ts"
