--- a/package.json
+++ b/package.json
@@ -1,33 +1,22 @@
 {
-  "name": "markdown-preview-server",
-  "module": "src/index.ts",
+  "name": "bun-react-template",
+  "version": "0.1.0",
+  "private": true,
   "type": "module",
-  "devDependencies": {
-    "@types/bun": "latest"
-  },
-  "peerDependencies": {
-    "typescript": "^5.0.0"
+  "scripts": {
+    "dev": "bun --hot src/index.ts",
+    "start": "NODE_ENV=production bun src/index.ts",
+    "build": "bun run build.ts"
   },
   "dependencies": {
-    "@commander-js/extra-typings": "^14.0.0",
-    "@elysiajs/cors": "^1.1.0",
-    "@elysiajs/static": "^1.1.0",
-    "@kitajs/html": "^4.2.11",
-    "@sinclair/typebox": "^0.34.41",
-    "@types/mathjax": "^0.0.40",
-    "commander": "^14.0.2",
-    "elysia": "^1.4.18",
-    "highlight.js": "^11.11.1",
-    "htmx.org": "^2.0.8",
-    "katex": "^0.16.27",
-    "logestic": "^1.2.3",
-    "marked": "^17.0.1",
-    "marked-extended-latex": "^1.1.0",
-    "marked-highlight": "^2.2.3",
-    "mathjax": "^4.0.0",
-    "tailwindcss": "^4.1.18"
+    "bun-plugin-tailwind": "^0.1.2",
+    "react": "^19",
+    "react-dom": "^19",
+    "tailwindcss": "^4.1.11"
   },
-  "scripts": {
-    "dev": "bun run entrypoints/dev.ts"
+  "devDependencies": {
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
+    "@types/bun": "latest"
   }
 }
