--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,11 @@
 {
   "compilerOptions": {
-    // Enable latest features
+    // Environment setup & latest features
     "lib": ["ESNext", "DOM"],
     "target": "ESNext",
-    "module": "ESNext",
+    "module": "Preserve",
     "moduleDetection": "force",
-
     "jsx": "react-jsx",
-    "jsxImportSource": "@kitajs/html",
     "allowJs": true,
 
     // Bundler mode
@@ -20,17 +18,19 @@
     "strict": true,
     "skipLibCheck": true,
     "noFallthroughCasesInSwitch": true,
+    "noUncheckedIndexedAccess": true,
+    "noImplicitOverride": true,
+
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["./src/*"]
+    },
 
     // Some stricter flags (disabled by default)
     "noUnusedLocals": false,
     "noUnusedParameters": false,
-    "noPropertyAccessFromIndexSignature": false,
+    "noPropertyAccessFromIndexSignature": false
+  },
 
-    "paths": {
-      "@/*": ["./src/*"]
-    },
-    "types": [
-      "@kitajs/html/htmx.d.ts"
-    ]
-  }
+  "exclude": ["dist", "node_modules"]
 }
