--- a/package.json
+++ b/package.json
@@ -10,13 +10,15 @@
   },
   "dependencies": {
     "bun-plugin-tailwind": "^0.1.2",
+    "elysia": "^1.4.19",
     "react": "^19",
     "react-dom": "^19",
+    "react-router": "^7.11.0",
     "tailwindcss": "^4.1.11"
   },
   "devDependencies": {
+    "@types/bun": "latest",
     "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "@types/bun": "latest"
+    "@types/react-dom": "^19"
   }
 }
