--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/mathjax": "^0.0.40",
     "commander": "^14.0.2",
     "elysia": "^1.4.18",
+    "front-matter": "^4.0.2",
     "highlight.js": "^11.11.1",
     "htmx.org": "^2.0.8",
     "katex": "^0.16.27",
